# line-repeater

./: .gitignore  README.md  line-repeater.spec  pyproject.toml
line_repeater/: __init__.py  cli.py  main.py  repeater.py
src/line_repeater/: __init__.py  _cli.py  _utils.py  gui.py  main.py
src/line_repeater/_core/: repeater.py
